added middleware and stauf with role base action

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,3 +31,21 @@ p.error{
 p.success{
     color: green;
 }
+.menu{
+    width: 500px;
+    margin: 50px auto 100px;
+
+    ul{
+        li{
+            list-style: none;
+        }
+        a{
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #000;
+            margin-bottom: 4px;
+        }
+    }
+}
